fix: add right padding to code blocks so text doesn't overlap copy button

--- a/assets/scss/_code.scss
+++ b/assets/scss/_code.scss
@@ -74,6 +74,7 @@ pre {
 
         pre {
             margin: 0;
+            padding-right: 4.5rem; // space for copy button
         }
     }
 }
